# grizzly-gate

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  gate-config.example.json  gate-config.json
.claude-plugin/: marketplace.json
.github/workflows/: build-gate-image.yaml
config/: detect.toml
docs/: coverage-matrix.md  coverage.md  using-the-gate.md
docs/decisions/: 028-centralized-ci-gate.md  029-gate-config-honest-map.md  030-cross-ecosystem-sca.md  031-go-svelte-react-coverage.md  032-python-dependency-install.md  033-self-gate-eslint-config-template.md  034-sca-vuln-only-license-loosening.md  035-distilled-check-output.md  036-honest-map-git-listing.md  037-cargo-deny-license-allowlist-broadening.md  038-exclude-generated-output-from-source-scanners.md  039-skip-dirs-in-ruff-mypy-golangci-lint.md  040-reconcile-ruff-semgrep-string-concat.md  041-svelte5-eslint-tuning.md
harness/: Cargo.toml  distill-samples.txt
harness/src/: config.rs  detect.rs  distill.rs  gateconfig.rs  main.rs  mcp.rs  report.rs
harness/src/distill/fixtures/: ansible-lint.json  cargo-deny.jsonl  clippy.jsonl  eslint.json  gitleaks.json  golangci-lint.json  mypy.jsonl  osv-scanner.json  ruff.json  semgrep.json  trivy.json
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: gate-fixer.md
plugin/hooks/: _common.sh  docker-check.sh  gate-push-guard.sh  hooks.json  suppression-watch.sh  unsupported-lang-warn.sh
scripts/: grizzly-gate-local.sh  publish-image.sh
scripts/hooks/: pre-push
(+20 files in other folders)
